# athlo

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  pyproject.toml
frontend/: App.tsx  DESIGN_SYSTEM_TODO.md  app.json  index.ts  metro.config.js  package-lock.json  package.json
frontend/src/components/: DatePicker.tsx  Icon.tsx  TimePicker.tsx
frontend/src/components/charts/: PeriodSelector.tsx  SimpleBarChart.tsx  SimpleLineChart.tsx  StatCard.tsx  index.ts
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/navigation/: AuthNavigator.tsx  MainNavigator.tsx  RootNavigator.tsx  index.ts  types.ts
frontend/src/screens/auth/: LoginScreen.tsx  OnboardingScreen.tsx  RegisterScreen.tsx
frontend/src/screens/main/: ActivitiesScreen.tsx  ActivityDetailScreen.tsx  AddActivityScreen.tsx  BodyHistoryScreen.tsx  BodyScreen.tsx  DivisionsScreen.tsx  EditDivisionScreen.tsx  EditStrengthWorkoutScreen.tsx  GoalsScreen.tsx  HomeScreen.tsx  ProfileScreen.tsx  RecordStrengthWorkoutScreen.tsx  RunningStatsScreen.tsx  StatsScreen.tsx  StrengthActivityDetailScreen.tsx  StrengthStatsScreen.tsx  (+1 more)
frontend/src/services/: api.ts
frontend/src/theme/: colors.ts  index.ts  spacing.ts  typography.ts
frontend/src/types/: index.ts
frontend/src/utils/: statsCalculations.ts
src/athlo/: __init__.py  config.py
src/athlo/api/: __init__.py  deps.py  main.py  schemas.py
src/athlo/models/: __init__.py  activity.py  base.py  body.py  goal.py  strength.py  user.py
src/athlo/repositories/: __init__.py  base.py  json_repository.py
src/athlo/services/: auth_service.py
(+5 files in other folders)
